# api/handler.go
@@ -13,15 +13,15 @@ import (
 
 // getStudents godoc
 //
-//	@Summary        Get a list of students
-//	@Description    Retrieve students details
-//	@Tags           students
-//	@Accept         json
-//	@Produce        json
-//	@Param          register path    int  false    "Registration"
-//	@Success        200 {object} schemas.StudentResponse
-//	@Failure        404
-//	@Router         /students [get]
+// @Summary        Get a list of students
+// @Description    Retrieve students details
+// @Tags           students
+// @Accept         json
+// @Produce        json
+// @Param          active query   bool  false  "Filter by active students"
+// @Success        200 {object} map[string][]schemas.StudentResponse
+// @Failure        404
+// @Router         /students [get]
 func (api *API) getStudents(c echo.Context) error {
 	students, err := api.DB.GetStudents()
 	if err != nil {
@@ -48,15 +48,16 @@ func (api *API) getStudents(c echo.Context) error {
 
 // getStudent godoc
 //
-//	@Summary        Get student by ID
-//	@Description    Retrieve student details using ID
-//	@Tags           students
-//	@Accept         json
-//	@Produce        json
-//	@Success        200 {object} schemas.StudentResponse
-//	@Failure        404
-//	@Failure        500
-//	@Router         /students/{id} [get]
+// @Summary        Get student by ID
+// @Description    Retrieve student details using ID
+// @Tags           students
+// @Accept         json
+// @Produce        json
+// @Param          id   path      int  true   "Student ID"
+// @Success        200 {object} schemas.StudentResponse
+// @Failure        404
+// @Failure        500
+// @Router         /students/{id} [get]
 func (api *API) getStudent(c echo.Context) error {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -78,14 +79,15 @@ func (api *API) getStudent(c echo.Context) error {
 
 // createStudent godoc
 //
-//	@Summary        Create student
-//	@Description    Create student
-//	@Tags           students
-//	@Accept         json
-//	@Produce        json
-//	@Success        200 {object} schemas.StudentResponse
-//	@Failure        400
-//	@Router         /students [post]
+// @Summary     Create student
+// @Description Create a new student
+// @Tags        students
+// @Accept      json
+// @Produce     json
+// @Param       student body StudentRequest true "Dados do estudante"
+// @Success     200 {object} schemas.StudentResponse
+// @Failure     400
+// @Router      /students [post]
 func (api *API) createStudent(c echo.Context) error {
 	studentReq := StudentRequest{}
 	if err := c.Bind(&studentReq); err != nil {
@@ -113,16 +115,17 @@ func (api *API) createStudent(c echo.Context) error {
 }
 
 // updateStudent godoc
-//
-//	@Summary        Update Student
-//	@Description    Update student details
-//	@Tags           students
-//	@Accept         json
-//	@Produce        json
-//	@Success        200 {object} schemas.StudentResponse
-//	@Failure        404
-//	@Failure        500
-//	@Router         /students/{id} [put]
+// @Summary        Update student
+// @Description    Update student details
+// @Tags           students
+// @Accept         json
+// @Produce        json
+// @Param          id        path   int              true  "Student ID"
+// @Param          student   body   schemas.Student  true  "Updated student data"
+// @Success        200 {object} schemas.StudentResponse
+// @Failure        404
+// @Failure        500
+// @Router         /students/{id} [put]
 func (api *API) updateStudent(c echo.Context) error {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -153,16 +156,16 @@ func (api *API) updateStudent(c echo.Context) error {
 }
 
 // deleteStudent godoc
-//
-//	@Summary        Delete Student
-//	@Description    Delete student details
-//	@Tags           students
-//	@Accept         json
-//	@Produce        json
-//	@Success        200 {object} schemas.StudentResponse
-//	@Failure        404
-//	@Failure        500
-//	@Router         /students/{id} [delete]
+// @Summary        Delete student
+// @Description    Delete student by ID
+// @Tags           students
+// @Accept         json
+// @Produce        json
+// @Param          id   path   int  true  "Student ID"
+// @Success        200 {object} schemas.StudentResponse
+// @Failure        404
+// @Failure        500
+// @Router         /students/{id} [delete]
 func (api *API) deleteStudent(c echo.Context) error {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
