# docs/swagger.yaml
@@ -1,4 +1,19 @@
 definitions:
+  api.StudentRequest:
+    properties:
+      Active:
+        type: boolean
+      Age:
+        type: integer
+      CPF:
+        type: integer
+      Email:
+        type: string
+      Name:
+        type: string
+    type: object
+  schemas.Student:
+    type: object
   schemas.StudentResponse:
     properties:
       Active:
@@ -28,17 +43,21 @@ paths:
       - application/json
       description: Retrieve students details
       parameters:
-      - description: Registration
-        in: path
-        name: register
-        type: integer
+      - description: Filter by active students
+        in: query
+        name: active
+        type: boolean
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/schemas.StudentResponse'
+            additionalProperties:
+              items:
+                $ref: '#/definitions/schemas.StudentResponse'
+              type: array
+            type: object
         "404":
           description: Not Found
       summary: Get a list of students
@@ -47,7 +66,14 @@ paths:
     post:
       consumes:
       - application/json
-      description: Create student
+      description: Create a new student
+      parameters:
+      - description: Dados do estudante
+        in: body
+        name: student
+        required: true
+        schema:
+          $ref: '#/definitions/api.StudentRequest'
       produces:
       - application/json
       responses:
@@ -64,7 +90,13 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Delete student details
+      description: Delete student by ID
+      parameters:
+      - description: Student ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -76,13 +108,19 @@ paths:
           description: Not Found
         "500":
           description: Internal Server Error
-      summary: Delete Student
+      summary: Delete student
       tags:
       - students
     get:
       consumes:
       - application/json
       description: Retrieve student details using ID
+      parameters:
+      - description: Student ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -101,6 +139,18 @@ paths:
       consumes:
       - application/json
       description: Update student details
+      parameters:
+      - description: Student ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Updated student data
+        in: body
+        name: student
+        required: true
+        schema:
+          $ref: '#/definitions/schemas.Student'
       produces:
       - application/json
       responses:
@@ -112,7 +162,7 @@ paths:
           description: Not Found
         "500":
           description: Internal Server Error
-      summary: Update Student
+      summary: Update student
       tags:
       - students
 swagger: "2.0"
